Correcting some text mistakes in the help file

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -17,8 +17,8 @@ GET_OBJECT = Retrieves a single object from a bucket.\n\
             Requires the '-b' parameter to specify bucket (name or UUID).\n\
             Requires the '-o' parameter to specify object (name or UUID).\n\
             Optional '-d' parameter to specify restore directory (default '.').\n\
-            Optional '--sync' flag to retrieve only newer or non-extant files.\n\
-            Optional '--file-metadata' flag restores file metadata to the values extant when archived.\n\
+            Optional '--sync' flag to restore files that are either newer than the existing files, or if the file doesn't exist on the target.\n\
+            Optional '--file-metadata' flag restores file metadata if possible for the file.\n\
             Optional '-nt' parameter to specify number of threads.\n\n\
             Use the get_service command to retrieve a list of buckets.\n\
             Use the get_bucket command to retrieve a list of objects.
@@ -40,7 +40,7 @@ PUT_OBJECT = This is provided for Amazon S3 compatibility.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
         Requires the '-o' parameter to specify local object name.\n\
         Optional '-p' parameter (unless | ) to specify prefix or directory name.\n\
-        Optional '--sync' flag to put only newer or non-extant files.\n\
+        Optional '--sync' flag to put only newer or non-existent files.\n\
         Optional '--file-metadata' flag archives file metadata with files.\n\
         Optional '-nt' parameter to specify number of threads.\n\
         Optional '--ignore-errors' flag to continue on errors.\n\
@@ -65,8 +65,8 @@ GET_BULK = Retrieve multiple objects from a bucket.\n\
         Optional '-d' parameter to specify restore directory (default '.').\n\
         Optional '-p' parameter to specify prefix or directory name.\n\
              Separate multiple values with spaces, e.g., -p prefix1 prefix2\n\
-        Optional '--sync' flag to retrieve only newer or non-extant files.\n\
-        Optional '--file-metadata' flag restores file metadata to the values extant when archived.\n\
+        Optional '--sync' flag to restore files that are either newer than the existing files, or if the file doesn't exist on the target.\n\
+        Optional '--file-metadata' flag restores file metadata if possible for the files.\n\
         Optional '-nt' parameter to specify number of threads.
 
 VERIFY_BULK_JOB = A verify job reads data from the permanent data store and verifies that the CRC of the data \n\
@@ -80,7 +80,7 @@ PUT_BULK = Put multiple objects from a directory or pipe into a bucket.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
         Requires the '-d' parameter (unless | ) to specify source directory.\n\
         Optional '-p' parameter (unless | ) to specify prefix or directory name.\n\
-        Optional '--sync' flag to put only newer or non-extant files.\n\
+        Optional '--sync' flag to restore files that are either newer than the existing files, or if the file doesn't exist on the BlackPearl.\n\
         Optional '--file-metadata' flag archives file metadata with files.\n\
         Optional '-nt' parameter to specify number of threads.\n\
         Optional '--ignore-errors' flag to continue on errors.\n\
@@ -257,7 +257,7 @@ GET_TAPE = Returns information on a single tape.\n\
 RECOVER_GET_BULK = Recovers a get_bulk job.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
         Requires the '-i" parameter with the UUID for the interrupted or failed job.\n\
-        Optional '--file-metadata' flag restores file metadata to the values extant when archived.\n\
+        Optional '--file-metadata' flag restores file metadata if possible for the files.\n\
         Other parameters should match the original get_bulk.
 
 RECOVER_PUT_BULK = Recovers a put_bulk job.\n\
@@ -268,7 +268,7 @@ RECOVER_PUT_BULK = Recovers a put_bulk job.\n\
         Other parameters should match the original put_bulk.
 
 RECOVER = Recover a failed or iterrupted put_bulk or get_bulk job using recover files.\n\
-        Recover files are written to temp space on put_bulk and get_bulk.
+        Recover files are written to temp space on put_bulk and get_bulk. \n\
         Use this command to manage files or initiate a recovery with the '--recover' option
 
 GET_POOL = Returns information on a single pool.\n\
