--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@
 
 buildscript {
 
+    buildscript {
+        ext.kotlin_version = '1.3.50'
+    }
+
     repositories {
         maven {
             url "https://plugins.gradle.org/m2/"
@@ -23,6 +27,7 @@ buildscript {
 
     dependencies {
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -54,6 +59,7 @@ subprojects {
         compile 'com.google.guava:guava:23.0-jre'
         compile 'com.spectralogic.ds3:ds3-sdk:5.0.5'
         compile 'com.google.inject:guice:4.2.0'
+        compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
 
         testCompile('org.mockito:mockito-core:1.10.19') {
             exclude group: 'org.hamcrest'
