--- a/ds3_java_cli/build.gradle
+++ b/ds3_java_cli/build.gradle
@@ -17,6 +17,7 @@ import java.nio.file.Files
 import java.nio.file.Path
 
 apply plugin: 'application'
+apply plugin: 'kotlin'
 
 mainClassName = 'com.spectralogic.ds3cli.Main'
 
