Add gradle wrapper task
Allow the gradle build to explicitly define which version of gradle
we are using, which also provides a formal way for bumping the
verion of the gradle wrapper being used by the project.

--- a/build.gradle
+++ b/build.gradle
@@ -91,3 +91,8 @@ project(':ds3-cli-certification') {
         testCompile project(path: ':ds3-cli-helpers', configuration: 'testOutput')
     }
 }
+
+wrapper {
+    // to upgrade the gradle wrapper, bump the version below and run ./gradlew wrapper
+    gradleVersion = '6.0.1'
+}
