--- a/build.gradle
+++ b/build.gradle
@@ -13,22 +13,9 @@
  * ***************************************************************************
  */
 
-buildscript {
-
-    buildscript {
-        ext.kotlin_version = '1.4.10'
-    }
-
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-
-    dependencies {
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+plugins {
+    id "com.github.ben-manes.versions" version "0.17.0"
+    id "org.jetbrains.kotlin.jvm" version "1.4.10" apply false
 }
 
 allprojects {
