--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@
 plugins {
     id "com.github.ben-manes.versions" version "0.17.0"
     id "org.jetbrains.kotlin.jvm" version "1.4.10" apply false
+    id "org.owasp.dependencycheck" version "7.1.0.1"
 }
 
 allprojects {
