--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,9 @@
  */
 
 plugins {
-    id "com.github.ben-manes.versions" version "0.17.0"
-    id "org.jetbrains.kotlin.jvm" version "1.4.10" apply false
-    id "org.owasp.dependencycheck" version "7.1.0.1"
+    id 'com.github.ben-manes.versions' version '0.17.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.10' apply false
+    id 'org.owasp.dependencycheck' version '7.1.0.1'
 }
 
 allprojects {
@@ -31,8 +31,6 @@ allprojects {
 subprojects {
     apply plugin: 'com.github.ben-manes.versions'
     apply plugin: 'java'
-    apply plugin: 'maven'
-    apply plugin: 'idea'
 
     sourceCompatibility = JavaVersion.VERSION_1_8
 
@@ -41,46 +39,48 @@ subprojects {
     }
 
     dependencies {
-        compile 'ch.qos.logback:logback-core:1.2.3'
-        compile 'ch.qos.logback:logback-classic:1.2.3'
-        compile 'com.google.guava:guava:23.0-jre'
+        implementation 'ch.qos.logback:logback-core:1.2.3'
+        implementation 'ch.qos.logback:logback-classic:1.2.3'
+        implementation 'com.google.guava:guava:23.0-jre'
         implementation 'com.github.spectralogic.ds3_java_sdk:ds3-sdk:5.1.2'
-        compile 'com.google.inject:guice:4.2.0'
-        compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+        implementation 'com.google.inject:guice:4.2.0'
+        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
 
-        testCompile('org.mockito:mockito-core:1.10.19') {
+        testImplementation('org.mockito:mockito-core:1.10.19') {
             exclude group: 'org.hamcrest'
         }
 
-        testCompile 'junit:junit:4.12'
-        testCompile 'org.hamcrest:hamcrest-library:1.3'
-        testCompile "org.powermock:powermock-api-mockito:1.6.4"
-        testCompile "org.powermock:powermock-module-junit4:1.6.4"
+        testImplementation 'junit:junit:4.12'
+        testImplementation 'org.hamcrest:hamcrest-library:1.3'
+        testImplementation 'org.powermock:powermock-api-mockito:1.6.4'
+        testImplementation 'org.powermock:powermock-module-junit4:1.6.4'
     }
 }
 
 project(':ds3-cli-helpers') {
     dependencies {
-        compile project(':ds3_java_cli')
+        implementation project(':ds3_java_cli')
     }
 }
 
 project(':ds3-cli-integration') {
     dependencies {
-        testCompile project(':ds3-cli-helpers')
-        testCompile project(path: ':ds3-cli-helpers', configuration: 'testOutput')
+        testImplementation project(':ds3_java_cli')
+        testImplementation project(':ds3-cli-helpers')
+        testImplementation project(path: ':ds3-cli-helpers', configuration: 'testOutput')
     }
 }
 
 project(':ds3-cli-certification') {
     dependencies {
-        compile project(':ds3-cli-helpers')
-        testCompile project(':ds3-cli-helpers')
-        testCompile project(path: ':ds3-cli-helpers', configuration: 'testOutput')
+        implementation project(':ds3_java_cli')
+        implementation project(':ds3-cli-helpers')
+        testImplementation project(':ds3-cli-helpers')
+        testImplementation project(path: ':ds3-cli-helpers', configuration: 'testOutput')
     }
 }
 
 wrapper {
     // to upgrade the gradle wrapper, bump the version below and run ./gradlew wrapper
-    gradleVersion = '6.0.1'
+    gradleVersion = '7.4.2'
 }
