--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,9 @@
  */
 
 plugins {
-    id 'com.github.ben-manes.versions' version '0.17.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.10' apply false
-    id 'org.owasp.dependencycheck' version '7.1.0.1'
+    alias(libs.plugins.gradleDepVers)
+    alias(libs.plugins.kotlinJvm).apply(false)
+    alias(libs.plugins.owaspDepCheck)
 }
 
 allprojects {
@@ -39,21 +39,21 @@ subprojects {
     }
 
     dependencies {
-        implementation 'ch.qos.logback:logback-core:1.2.3'
-        implementation 'ch.qos.logback:logback-classic:1.2.3'
-        implementation 'com.google.guava:guava:23.0-jre'
-        implementation 'com.github.spectralogic.ds3_java_sdk:ds3-sdk:5.1.2'
-        implementation 'com.google.inject:guice:4.2.0'
-        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+        implementation libs.logbackCore
+        implementation libs.logbackClassic
+        implementation libs.guava
+        implementation libs.ds3Sdk
+        implementation libs.guiceCore
+        implementation libs.kotlinCoroutinesCore
 
-        testImplementation('org.mockito:mockito-core:1.10.19') {
+        testImplementation(libs.mockitoCore) {
             exclude group: 'org.hamcrest'
         }
 
-        testImplementation 'junit:junit:4.12'
-        testImplementation 'org.hamcrest:hamcrest-library:1.3'
-        testImplementation 'org.powermock:powermock-api-mockito:1.6.4'
-        testImplementation 'org.powermock:powermock-module-junit4:1.6.4'
+        testImplementation libs.junit
+        testImplementation libs.hamcrestLib
+        testImplementation libs.powermockMockito
+        testImplementation libs.powermockJunit4
     }
 }
 
