--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,4 +1,11 @@
 [versions]
+#
+# project version
+#
+ds3JavaCliVersion = "5.1.4"
+#
+# dependency versions
+#
 commonsCliVersion = "1.5.0"
 commonsCsvVersion = "1.9.0"
 ds3SdkVersion = "5.1.3"
@@ -34,8 +41,9 @@ logbackClassic = { module = "ch.qos.logback:logback-classic", version.ref = "log
 mockitoCore = { module = "org.mockito:mockito-core", version.ref = "mockitoVersion" }
 powermockMockito = { module = "org.powermock:powermock-api-mockito2", version.ref = "powermockVersion" }
 powermockJunit4 = { module = "org.powermock:powermock-module-junit4", version.ref = "powermockVersion" }
-
-[plugins]
-gradleDepVers = { id = "com.github.ben-manes.versions", version = "0.17.0" }
-kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlinVersion" }
-owaspDepCheck = { id = "org.owasp.dependencycheck", version =  "7.4.1" }
+#
+# plugins used in buildSrc/
+#
+gradleDepVersPlugin = { group = "com.github.ben-manes", name = "gradle-versions-plugin", version = "0.46.0" }
+kotlinJvmPlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlinVersion" }
+owaspDepCheckPlugin = { group = "org.owasp", name = "dependency-check-gradle", version = "8.1.2" }
