--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -8,10 +8,12 @@ ds3JavaCliVersion = "5.1.4"
 #
 commonsCliVersion = "1.5.0"
 commonsCsvVersion = "1.9.0"
+commonsIoVersion = "2.11.0"
 ds3SdkVersion = "5.6.0"
 guavaVersion="32.1.2-jre"
 guiceVersion="5.1.0"
 hamcrestVersion = "2.2"
+httpclientVersion = "4.5.13"
 jacksonVersion = "2.15.2"
 jodaTimeVersion = "2.9.9"
 junitVersion = "4.13.2"
@@ -20,19 +22,23 @@ kotlinVersion = "1.6.20"
 logbackVersion = "1.3.5"
 mockitoVersion = "3.12.4"
 powermockVersion = "2.0.9"
+slf4jVersion = "1.7.30"
 
 [libraries]
 commonsCli = { module = "commons-cli:commons-cli", version.ref = "commonsCliVersion" }
 commonsCsv = { module = "org.apache.commons:commons-csv", version.ref = "commonsCsvVersion" }
+commonsIo = { group = "commons-io", name = "commons-io", version.ref = "commonsIoVersion" }
 ds3Bom = { module = "com.spectralogic.ds3:ds3-bom", version.ref = "ds3SdkVersion"}
 ds3Sdk = { module = "com.spectralogic.ds3:ds3-sdk" }
 guava = { module = "com.google.guava:guava", version.ref = "guavaVersion" }
 guiceCore = { module = "com.google.inject:guice" , version.ref = "guiceVersion" }
 hamcrestLib = { module = "org.hamcrest:hamcrest-library", version.ref = "hamcrestVersion" }
+httpclient = { group = "org.apache.httpcomponents", name = "httpclient", version.ref = "httpclientVersion" }
 jacksonBom = { module = "com.fasterxml.jackson:jackson-bom", version.ref = "jacksonVersion" }
 jacksonAnnotations = { module = "com.fasterxml.jackson.core:jackson-annotations" }
 jacksonCore = { module = "com.fasterxml.jackson.core:jackson-core" }
 jacksonDatabind = { module = "com.fasterxml.jackson.core:jackson-databind" }
+jacksonDataformatXml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml" }
 jacksonDatatypeGuava = { module = "com.fasterxml.jackson.datatype:jackson-datatype-guava" }
 jodaTime = { module = "joda-time:joda-time", version.ref = "jodaTimeVersion" }
 junit = { module = "junit:junit", version.ref = "junitVersion" }
@@ -42,6 +48,7 @@ logbackClassic = { module = "ch.qos.logback:logback-classic", version.ref = "log
 mockitoCore = { module = "org.mockito:mockito-core", version.ref = "mockitoVersion" }
 powermockMockito = { module = "org.powermock:powermock-api-mockito2", version.ref = "powermockVersion" }
 powermockJunit4 = { module = "org.powermock:powermock-module-junit4", version.ref = "powermockVersion" }
+slf4jApi = { group = "org.slf4j", name = "slf4j-api", version.ref = "slf4jVersion" }
 #
 # plugins used in buildSrc/
 #
