--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -9,12 +9,13 @@ ds3JavaCliVersion = "5.1.4"
 commonsCliVersion = "1.5.0"
 commonsCsvVersion = "1.9.0"
 commonsIoVersion = "2.11.0"
-ds3SdkVersion = "5.6.0"
+ds3SdkVersion = "5.6.2"
+findbugsVersion = "3.0.1"
 guavaVersion="32.1.2-jre"
 guiceVersion="5.1.0"
 hamcrestVersion = "2.2"
 httpclientVersion = "4.5.13"
-jacksonVersion = "2.15.2"
+jacksonVersion = "2.14.3"
 jodaTimeVersion = "2.9.9"
 junitVersion = "4.13.2"
 kotlincoroutineVersion = "1.6.4"
@@ -30,6 +31,7 @@ commonsCsv = { module = "org.apache.commons:commons-csv", version.ref = "commons
 commonsIo = { group = "commons-io", name = "commons-io", version.ref = "commonsIoVersion" }
 ds3Bom = { module = "com.spectralogic.ds3:ds3-bom", version.ref = "ds3SdkVersion"}
 ds3Sdk = { module = "com.spectralogic.ds3:ds3-sdk" }
+findbugs = { group = "com.google.code.findbugs", name = "annotations", version.ref = "findbugsVersion" }
 guava = { module = "com.google.guava:guava", version.ref = "guavaVersion" }
 guiceCore = { module = "com.google.inject:guice" , version.ref = "guiceVersion" }
 hamcrestLib = { module = "org.hamcrest:hamcrest-library", version.ref = "hamcrestVersion" }
